Fix: Added role to RegisterUser handler and seed.go
